<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalInfoFragment"
    android:layout_marginTop="15sp"
    android:layout_marginLeft="15sp"
    android:layout_marginRight="15sp">


    <TextView
        android:id="@+id/aboutAddTime"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="15dp"
        android:text="@string/about_add_time"
        app:layout_constraintStart_toStartOf="@+id/aboutAddDate"
        app:layout_constraintTop_toBottomOf="@+id/aboutAddDate" />

    <TextView
        android:id="@+id/aboutAddDate"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="15dp"
        android:text="@string/about_add_date"
        app:layout_constraintStart_toStartOf="@+id/aboutAddPlace"
        app:layout_constraintTop_toBottomOf="@+id/aboutAddPlace" />

    <TextView
        android:id="@+id/aboutAddName"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="20dp"
        android:text="@string/about_add_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutAddPlace"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="15dp"
        android:text="@string/about_add_place"
        app:layout_constraintStart_toStartOf="@+id/aboutAddName"
        app:layout_constraintTop_toBottomOf="@+id/aboutAddName" />

    <TextView
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="15dp"
        android:digits="@string/data_digits"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/editTextPlace"
        app:layout_constraintTop_toBottomOf="@+id/editTextPlace" />

    <TextView
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="15dp"
        android:digits="@string/time_digits"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/aboutAddName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextPlace"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/exit_dital"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAddTime" />
</androidx.constraintlayout.widget.ConstraintLayout>